--- a/app/src/main/res/layout/activity_currency_detail.xml
+++ b/app/src/main/res/layout/activity_currency_detail.xml
@@ -412,7 +412,7 @@
                         android:text="Go to Main Vault"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/button2"
+                        app:layout_constraintStart_toEndOf="@+id/ToTransactionHistory"
                         app:layout_constraintTop_toBottomOf="@+id/VaultLiquid" />
 
                     <TextView
@@ -454,7 +454,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/AssetsBought" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/ToTransactionHistory"
                         style="@android:style/Widget.Holo.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
