--- a/app/src/main/res/layout/list_item_transaction.xml
+++ b/app/src/main/res/layout/list_item_transaction.xml
@@ -11,6 +11,7 @@
         android:id="@+id/TransactionItemSell"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="3dp"
         android:layout_marginStart="10dp"
         android:enabled="false"
         android:textAlignment="center"
@@ -27,9 +28,8 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="8dp"
         android:layout_weight="1"
-        android:gravity="center_vertical"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/TransactionItemDate"
@@ -58,7 +58,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="TextView"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/TransactionItemDate"
@@ -73,7 +73,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="01/16/16"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/TransactionItemBuy"
@@ -84,7 +84,7 @@
         android:id="@+id/TransactionItemBuy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:enabled="false"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
