--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -83,8 +83,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:ems="10"
-            android:hint="Enter a start Date"
-            android:inputType="date"
+            android:hint="Start Date"
+            android:inputType="datetime"
             app:layout_constraintEnd_toStartOf="@+id/textView6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TransctionBuys" />
@@ -108,8 +108,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:ems="10"
-            android:hint="e.g (10/31/2018)"
-            android:inputType="date"
+            android:hint="End Date e.g (10/31/2018)"
+            android:inputType="datetime"
             app:layout_constraintBaseline_toBaselineOf="@+id/TransactionDateStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView6" />
