--- a/app/src/main/res/layout/list_item_transaction.xml
+++ b/app/src/main/res/layout/list_item_transaction.xml
@@ -58,7 +58,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/TransactionItemDate"
