--- a/app/src/main/res/layout/activity_currency_detail.xml
+++ b/app/src/main/res/layout/activity_currency_detail.xml
@@ -30,6 +30,78 @@
                 android:layout_height="match_parent">
 
                 <android.support.constraint.ConstraintLayout
+                    android:id="@+id/Charts"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/CurrencyPrice"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_toEndOf="@+id/PriceTime"
+                        android:background="@color/colorPrimaryDark"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorText"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/PriceTime"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/PriceTime"
+                        android:layout_width="130dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:background="@color/colorPrimaryDark"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/colorText"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toStartOf="@+id/CurrencyPrice"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <com.github.mikephil.charting.charts.CandleStickChart
+
+                        android:id="@+id/CurrencyChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:background="@color/colorPrimaryDark"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/CurrencyPrice">
+
+                    </com.github.mikephil.charting.charts.CandleStickChart>
+
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/VolumeChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:background="@color/colorPrimaryDark"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/CurrencyChart">
+
+                    </com.github.mikephil.charting.charts.BarChart>
+
+                    <com.github.mikephil.charting.charts.CombinedChart
+                        android:id="@+id/MACD"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:background="@color/colorPrimaryDark"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/VolumeChart">
+
+                    </com.github.mikephil.charting.charts.CombinedChart>
+
+                </android.support.constraint.ConstraintLayout>
+
+                <android.support.constraint.ConstraintLayout
                     android:id="@+id/Vault"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -379,7 +451,7 @@
                         app:layout_constraintStart_toEndOf="@+id/VaultLiquid" />
 
                     <Button
-                        android:id="@+id/MainVault"
+                        android:id="@+id/MainVaultBtn"
                         style="@android:style/Widget.Holo.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -438,8 +510,8 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:text="View Transactions"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/MainVault"
-                        app:layout_constraintEnd_toStartOf="@+id/MainVault"
+                        app:layout_constraintBaseline_toBaselineOf="@+id/MainVaultBtn"
+                        app:layout_constraintEnd_toStartOf="@+id/MainVaultBtn"
                         app:layout_constraintStart_toStartOf="parent" />
 
                 </android.support.constraint.ConstraintLayout>
@@ -517,78 +589,6 @@
                             android:text="@string/btc" />
 
                     </RadioGroup>
-
-                </android.support.constraint.ConstraintLayout>
-
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/Charts"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:id="@+id/CurrencyPrice"
-                        android:layout_width="0dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_toEndOf="@+id/PriceTime"
-                        android:background="@color/colorPrimaryDark"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorText"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/PriceTime"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/PriceTime"
-                        android:layout_width="130dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:background="@color/colorPrimaryDark"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/colorText"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@+id/CurrencyPrice"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <com.github.mikephil.charting.charts.CandleStickChart
-
-                        android:id="@+id/CurrencyChart"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:background="@color/colorPrimaryDark"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/CurrencyPrice">
-
-                    </com.github.mikephil.charting.charts.CandleStickChart>
-
-                    <com.github.mikephil.charting.charts.BarChart
-                        android:id="@+id/VolumeChart"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:background="@color/colorPrimaryDark"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/CurrencyChart">
-
-                    </com.github.mikephil.charting.charts.BarChart>
-
-                    <com.github.mikephil.charting.charts.CombinedChart
-                        android:id="@+id/MACD"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@color/colorPrimaryDark"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/VolumeChart">
-
-                    </com.github.mikephil.charting.charts.CombinedChart>
 
                 </android.support.constraint.ConstraintLayout>
 
