--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RefreshLayout"
@@ -7,64 +8,84 @@
     android:layout_height="match_parent"
     tools:context="com.andyisdope.cryptowatcher.MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/activity_main"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        tools:context="com.andyisdope.cryptowatcher.MainActivity">
+        android:layout_height="match_parent">
 
-        <TabHost
-            android:id="@+id/CTlist"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:theme="@style/TabStyle">
+        <RelativeLayout
+            android:id="@+id/activity_main"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/colorPrimaryDark"
+            ads:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:context="com.andyisdope.cryptowatcher.MainActivity">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <TabHost
+                android:id="@+id/CTlist"
+                android:layout_width="400dp"
+                android:layout_height="300dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:theme="@style/TabStyle">
 
-                <TabWidget
-                    android:id="@android:id/tabs"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    <TabWidget
+                        android:id="@android:id/tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/CoinList"
+                    <FrameLayout
+                        android:id="@android:id/tabcontent"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                    </android.support.v7.widget.RecyclerView>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/CoinList"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/TokenList"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        </android.support.v7.widget.RecyclerView>
 
-                    </android.support.v7.widget.RecyclerView>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/TokenList"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/Favorites"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        </android.support.v7.widget.RecyclerView>
 
-                    </android.support.v7.widget.RecyclerView>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/Favorites"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
-                </FrameLayout>
+                        </android.support.v7.widget.RecyclerView>
 
-            </LinearLayout>
-        </TabHost>
+                    </FrameLayout>
 
-    </RelativeLayout>
+                </LinearLayout>
+            </TabHost>
+
+        </RelativeLayout>
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_main" />
+    </android.support.constraint.ConstraintLayout>
 
 
 </android.support.v4.widget.SwipeRefreshLayout>
