--- a/app/src/main/res/layout/activity_transaction_history.xml
+++ b/app/src/main/res/layout/activity_transaction_history.xml
@@ -83,8 +83,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:ems="10"
-            android:hint="Start Date"
+            android:hint="Start Date e.g (10/31/2018)"
             android:inputType="datetime"
+            android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/textView6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TransctionBuys" />
@@ -108,8 +109,9 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:ems="10"
-            android:hint="End Date e.g (10/31/2018)"
+            android:hint="End Date"
             android:inputType="datetime"
+            android:textSize="14sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/TransactionDateStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView6" />
