--- a/app/src/main/res/layout/list_item_share.xml
+++ b/app/src/main/res/layout/list_item_share.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/VaultShareAsset"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -30,7 +30,6 @@
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
         android:text="TextView"
-        android:textAlignment="textEnd"
         android:textColor="@color/TickerNameColor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
