--- a/app/src/main/res/layout/list_item_share.xml
+++ b/app/src/main/res/layout/list_item_share.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@drawable/background_borders">
@@ -28,8 +27,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="center_vertical"
         android:text="TextView"
+        android:textAlignment="textEnd"
         android:textColor="@color/TickerNameColor"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
